[metadata]
version = 0.1.0
name = code-advent
author = Andrea Vitali

[options]
python-requires = ~=3.10.4
zip_safe = False
package_dir=
    =src
packages=find:
install_requires =
    packaging==21.3
    click==8.1.3

[options.packages.find]
where=src

[options.extras_require]
lint=
    black==22.10.0
    isort==5.10.1
    flake8==6.0.0
